TS-2344: 404 error was logged while url redirect request was processed corrctly Reviewed: Bryan Call